[workspace]
members = [
    "ptr_meta",
    "ptr_meta_derive",
]
resolver = "2"

[workspace.package]
version = "0.3.0-pre1"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rkyv/ptr_meta"

[workspace.dependencies]
proc-macro2 = "1.0"
ptr_meta_derive = { version = "0.3.0-pre1", path = "ptr_meta_derive" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
