[workspace]
members = [
    "ptr_meta",
    "ptr_meta_derive",
]
resolver = "2"

[workspace.package]
version = "0.3.0-alpha.3"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rkyv/ptr_meta"
keywords = ["no_std"]
categories = ["no-std", "no-std::no-alloc"]

[workspace.dependencies]
proc-macro2 = { version = "1", default-features = false }
ptr_meta_derive = { version = "=0.3.0-alpha.3", default-features = false, path = "ptr_meta_derive" }
syn = { version = "2", default-features = false }
quote = { version = "1", default-features = false }
