[package]
name = "ptr_meta"
description = "A radioactive stabilization of the ptr_meta rfc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ptr_meta"
keywords = ["ptr", "meta", "no_std"]
categories = ["no-std"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptr_meta_derive.workspace = true

[features]
default = ["std"]
std = []
