[package]
name = "ptr_meta_derive"
version = "0.1.4"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"
description = "Macros for ptr_meta"
license = "MIT"
documentation = "https://docs.rs/ptr_meta_derive"
repository = "https://github.com/djkoloski/ptr_meta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
